--- a/styles/style.css
+++ b/styles/style.css
@@ -132,7 +132,6 @@ nav button:active {
     width: 70%;
     height: 100vh;
     margin-left: 15vw;
-    /*justify-content: space-around;*/
 }
 
 .projetos-container h1{
@@ -144,16 +143,17 @@ nav button:active {
     flex-direction: row;
     justify-content: space-between;
     margin-top: 15vh;
+    max-height: 100%;
 }
 
 .projeto {
-    max-width: 15vw;
+    max-width: 12vw;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: start;
     padding: 2vh;
-    font-size: 2vh;
+    font-size: 1.5vh;
     text-align: justify;
     color: var(--color-c);
     
@@ -169,8 +169,8 @@ nav button:active {
 
 .projeto h1 {
     align-self: flex-start;
-    margin-bottom: 1vh;
-    font-size: 2.5vh;
+    margin-bottom: 0.5vh;
+    font-size: 1.6vh;
 }
 
 .projeto p {
@@ -181,11 +181,16 @@ nav button:active {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    width: 15vw;
+    align-items: end;
+    width: 12vw;
+    height: 100%;
+    opacity: 80%;
 }
 
 .projeto-icones a svg {
-    width: 1.5vw;
-    margin-right: 2vh;
-
+    width: 1vw;
+    height: auto;
+    margin-right: 1.6vh;
 }
+
+/*fim da pagina dos projetos*/
