--- a/styles/style.css
+++ b/styles/style.css
@@ -17,14 +17,12 @@
 }
 
 nav {
-    /*posição*/
     display: flex;
     justify-content: space-around;
     align-items: center;
     width: 100%;
     height: 10vh;
 
-    /*estilização*/
     background-color: var(--color-b);
 }
 
@@ -43,7 +41,6 @@ nav a:hover {
 }
 
 nav button {
-    /*layout*/
     font-weight: 700;
     padding: 1vh 1.5vw;
     border-radius: 10px;
@@ -52,7 +49,7 @@ nav button {
     border: none;
     cursor: pointer;
 
-    transition: background-color 0.3s, color 0.3s;
+    transition: background-color 0.3s, color 0.3s; /*animação do clique no botão*/
 }
 
 nav button:hover {
@@ -66,6 +63,47 @@ nav button:active {
 }
 
 /*Fim da barra de navegação*/
+
+.aside-container {
+    display: none;
+    position: fixed;
+    top: 20vw;
+    left: 0.8vh;
+    z-index: 1000;
+
+    animation:slideFade 0.4s;
+}
+
+.aside-container-icons {
+    display: flex;
+    height: 25vh;
+    width: 3vw;
+    padding: 4vh 0.3vh 4vh 0.3vh;
+    justify-content: space-between;
+    flex-direction: column;
+    align-items: start;
+    background-color: var(--color-a);
+    border-radius: 60px;
+}
+
+.aside-container-icons a:hover {
+    background-color: var(--color-d);
+}
+.aside-container-icons a svg {
+    width: 1vw;
+    height: auto;
+    margin-left: 2vh;
+    cursor: pointer;
+}
+
+.aside-container-icons a {
+    padding: 1vh 2vh 1vh 0;
+    border-radius: 50px;
+
+    transition: background-color 0.3s;
+}
+
+/*Fim da sessão da barra lateral*/
 
 .trabalho-container {
     display: flex;
@@ -81,19 +119,26 @@ nav button:active {
     color: var(--color-d);
 }
 
+.trabalho-container-titulo h1 {
+        animation:fadeInUp 1.2s ease backwards; /*animação fade in up da pagina*/
+}
+
 .trabalho-container-titulo h3 {
     font-weight: 400;
     color: var(--color-c);
+        animation:fadeInUp 0.5s ease backwards; /*animação fade in up da pagina*/
 }
 
 .trabalho-container-titulo h2 {
     font-weight: 600;
     color: var(--color-c);
+        animation:fadeInUp 1s ease backwards; /*animação fade in up da pagina*/
 }
 
 .trabalho-container-texto {
     color: var(--color-c);
     text-align: justify;
+        animation:fadeInUp 1.5s ease backwards; /*animação fade in up da pagina*/
 }
 
 .trabalho-container button {
@@ -111,6 +156,7 @@ nav button:active {
     cursor: pointer;
 
     transition: background-color 0.3s, color 0.3s;
+    animation:fadeInUp 2s ease backwards; /*animação fade in up da pagina*/
 }
 
 .trabalho-container button:hover{
@@ -160,6 +206,7 @@ nav button:active {
     box-shadow: #00000031 0px 10px 10px 2px;
     background-color: var(--color-);
 }
+
 
 .projeto img {
     max-width: 100%;
@@ -279,4 +326,23 @@ nav button:active {
     width: 1.4vw;
     height: auto;
 
+}
+
+/*Fim da pagina contato*/
+
+/*ANIMAÇÕES*/
+
+@keyframes fadeInUp{
+  0%{transform:translate(0px, 100px); opacity: 0;}
+  100%{transform:translate(0px, 0); opacity: 1;}
+}
+
+@keyframes slideFade{
+    0%{transform:translateX(-100px); opacity: 0;}
+    100%{transform: translateX(0); opacity: 1;}
+}
+
+@keyframes slideFadeOut{
+    0%{transform:translateX(0); opacity: 1;}
+    100%{transform: translateX(0-100px); opacity: 0;}
 }
