--- a/styles/style.css
+++ b/styles/style.css
@@ -387,10 +387,24 @@ body.modo-noturno .contato-container-icones a svg {
         display: none;
     }
 
+    nav button {
+        padding: 1.5vh 7vw;
+        font-size: large;
+    }
+
     /*Fim da barra lateral desktop*/
 
+    .trabalho-container {
+        width: 70vw;
+        height: 100vh;
+    }
+
     .trabalho-container-titulo {
-        font-size: 4.5vw;
+        font-size: 4.75vw;
+    }
+
+    .trabalho-container-texto {
+        font-size: 3vw;
     }
 
     .trabalho-container button {
