--- a/styles/style.css
+++ b/styles/style.css
@@ -403,6 +403,7 @@ body.modo-noturno .contato-container-icones a svg {
     /*Fim da barra lateral desktop*/
 
     .aside-mobile-nav {
+        animation:slideFade 1s ease ;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -411,12 +412,9 @@ body.modo-noturno .contato-container-icones a svg {
         left: 5vh;
         z-index: 1000;
 
-        opacity: 75%;
         border-radius: 50%;
-        background-color: var(--color-h)
+        background-color: var(--color-h);        
     }
-
-    /*Fim da barra de navegação*/
 
     .aside-mobile-nav:hover {
         cursor: pointer;
@@ -426,6 +424,8 @@ body.modo-noturno .contato-container-icones a svg {
         width: 5vh;
         height: auto;
     }
+
+    /*Fim da barra de navegação*/
 
     .trabalho-container {
         width: 70vw;
@@ -452,20 +452,21 @@ body.modo-noturno .contato-container-icones a svg {
     }
 
     .projetos-container {
-        height: 180vh;
+        height: 170vh;
     }
 
     .projetos-container h1 {
     text-align: center;
+    font-size: 150%;
     }
 
     .projetos-container-galeria {
         height: 100%;
-        margin-top: 8vh;
+        margin-top: 6vh;
         font-size: 0.1vw;
         flex-direction: column;
         align-items: center;
-        justify-content: space-between;
+        justify-content: space-around;
         margin-bottom: 5vh;
     }
 
@@ -517,13 +518,13 @@ body.modo-noturno .contato-container-icones a svg {
         flex-direction: row;
         height: 20vh;
         width: 60vw;
-        justify-content: space-around;
+        justify-content: baseline;
         align-items: center;
 
     }
 
     .contato-container-icones a svg{
-        width: 6vw;
+        width: 10vw;
     }
 
 }
